fix: fix the size of experiences on mobile (exceed screen size) & rebuild for github page.

--- a/portfolio/src/components/cssModules/Experience.module.scss
+++ b/portfolio/src/components/cssModules/Experience.module.scss
@@ -7,7 +7,8 @@
   width: 100%;
   max-width: 800px;
   margin: 0 auto;
-  padding-bottom: 4rem;
+  padding: 0 1.5rem 4rem;
+  box-sizing: border-box;
 }
 
 .experienceItem {
@@ -130,11 +131,6 @@
 }
 
 @media (max-width: 768px) {
-  .experienceContainer {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-
   .experienceItem {
     padding: 1rem;
   }
